add header + section.restaurant-app

--- a/index.html
+++ b/index.html
@@ -10,12 +10,53 @@
             crossorigin="anonymous"
             referrerpolicy="no-referrer"
         />
-
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
         <link rel="stylesheet" href="./assets/css/styles.css" />
 
         <title>Landing Page 01</title>
     </head>
     <body>
-        dev branch
+        <header class="main-header">
+            <div class="container">
+                <nav class="navbar">
+                    <div class="logo">
+                        <a href="#" class="logo__item">
+                            <img src="./assets/images/logo.png" alt="logo" />
+                        </a>
+                    </div>
+                    <ul class="navbar__menu">
+                        <li class="menu__item"><a href="#">Home</a></li>
+                        <li class="menu__item">
+                            <a href="#">Product</a>
+                        </li>
+                        <li class="menu__item"><a href="#">Faq</a></li>
+                        <li class="menu__item">
+                            <a href="#">Contact</a>
+                        </li>
+                    </ul>
+                </nav>
+            </div>
+        </header>
+
+        <section class="restaurant-app">
+            <div class="outer-container restaurant-app__bg">
+                <div class="container">
+                    <div class="inner-container inner-container__restaurant">
+                        <p>Restaurant app</p>
+                        <h1>Why stay hungry when you can order form Eats</h1>
+                        <h2>Order in exchange for hunger</h2>
+                        <div class="btn-container">
+                            <button class="btn">Delivery</button>
+                            <button class="btn">Menu</button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            </div>
+
+            
+        </section>
     </body>
 </html>
