--- a/index.html
+++ b/index.html
@@ -10,9 +10,12 @@
             crossorigin="anonymous"
             referrerpolicy="no-referrer"
         />
-        <link rel="preconnect" href="https://fonts.googleapis.com">
-        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-        <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
+        <link rel="preconnect" href="https://fonts.googleapis.com" />
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+        <link
+            href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
+            rel="stylesheet"
+        />
         <link rel="stylesheet" href="./assets/css/styles.css" />
 
         <title>Landing Page 01</title>
@@ -40,7 +43,7 @@
             </div>
         </header>
 
-        <section class="restaurant-app">
+        <main class="restaurant-app">
             <div class="outer-container restaurant-app__bg">
                 <div class="container">
                     <div class="inner-container inner-container__restaurant">
@@ -49,14 +52,11 @@
                         <h2>Order in exchange for hunger</h2>
                         <div class="btn-container">
                             <button class="btn">Delivery</button>
-                            <button class="btn">Menu</button>
+                            <button class="btn btn__secondery">Menu</button>
                         </div>
                     </div>
                 </div>
             </div>
-            </div>
-
-            
-        </section>
+        </main>
     </body>
 </html>
