add section app-works

--- a/index.html
+++ b/index.html
@@ -58,5 +58,46 @@
                 </div>
             </div>
         </main>
+
+        <section class="app-works">
+            <div class="container">
+                <h2>How the app works</h2>
+                <section class="app-works__container">
+                    <div class="image__container">
+                        <img
+                            src="./assets/images/app-works-1.jpeg"
+                            alt="app-works-1"
+                        />
+                    </div>
+
+                    <div class="text-container">
+                        <h3>Create an account</h3>
+                        <h4>
+                            Create/login to an existing account to get started
+                        </h4>
+                        <p>
+                            An account is created with your email and a desired
+                            password
+                        </p>
+                    </div>
+                </section>
+                <section class="app-works__container">
+                    <div class="text-container">
+                        <h3>Explore varieties</h3>
+                        <h4>Shop for your favorites meal as e dey hot.</h4>
+                        <p>
+                            Shop for your favorite meals or drinks and enjoy
+                            while doing it.
+                        </p>
+                    </div>
+                    <div class="image__container image__right">
+                        <img
+                            src="./assets/images/app-works-2.jpeg"
+                            alt="app-works-2"
+                        />
+                    </div>
+                </section>
+            </div>
+        </section>
     </body>
 </html>
