add section .actions && .footer

--- a/index.html
+++ b/index.html
@@ -46,11 +46,11 @@
         <main class="restaurant-app">
             <div class="outer-container restaurant-app__bg">
                 <div class="container">
-                    <div class="inner-container inner-container__restaurant">
+                    <div class="inner-container restaurant__cotainer">
                         <p>Restaurant app</p>
                         <h1>Why stay hungry when you can order form Eats</h1>
                         <h2>Order in exchange for hunger</h2>
-                        <div class="btn-container">
+                        <div class="btn-container btn-container__app">
                             <button class="btn">Delivery</button>
                             <button class="btn btn__secondery">Menu</button>
                         </div>
@@ -99,5 +99,36 @@
                 </section>
             </div>
         </section>
+
+        <sectin class="actions">
+            <div class="outer-container actions__bg">
+                <div class="container">
+                    <div class="inner-container actions__container">
+                        <h2>Order now.</h2>
+                        <h3>
+                            Available on your favorite store. Start your premium
+                            experience now
+                        </h3>
+                        <div class="btn-container btn-container__actions">
+                            <button class="btn">Playstore</button
+                            ><button class="btn">App store</button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </sectin>
+
+        <footer class="footer">
+            <div class="container footer__container">
+                <div class="logo">
+                    <a href="#" class="logo__item">
+                        <img src="./assets/images/logo.png" alt="logo" />
+                    </a>
+                </div>
+                <p class="footer__text">
+                    Copywright 2024 <span>Aleksandr Poberezhnyi</span>
+                </p>
+            </div>
+        </footer>
     </body>
 </html>
